--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       <ul id="topContacts" class='flex-box'></ul>
     </div>
     <div style='clear: both;'></div>
-    <div id="workExperience" class='gray'>
-      <h2>Work Experience</h2>
+    <div id="education" class='gray'>
+      <h2>Education</h2>
     </div>
     <div id="projects">
       <h2>Projects</h2>
     </div>
-    <div id="education" class='gray'>
-      <h2>Education</h2>
+    <div id="workExperience" class='gray'>
+      <h2>Work Experience</h2>
     </div>
     <div id="mapDiv">
-      <h2>Where I've Lived, Studied and Worked</h2>
+      <h2>Where I've Lived and Studied</h2>
     </div>
     <div id="letsConnect" class='dark-gray'>
       <h2 class='orange center-text'>Let's Connect</h2>
